infra/k8s/raw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapientia
  namespace: sapientia
spec:
  rules:
    - host: sapientia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
    - host: s3.sapientia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: object-storage
                port:
                  name: s3
